# distributed_system

./: README.md
AWS_S3/: CMakeLists.txt  Read.md  bucket.hpp  in_memory_storage_strategy.cpp  in_memory_storage_strategy.hpp  main.cpp  notification_service.cpp  notification_service.hpp  s3_object.cpp  s3_object.hpp  storage_service.cpp  storage_service.hpp  storage_strategy.hpp
Google_drive/: CMakeLists.txt  CreateFileOperation.cpp  CreateFileOperation.hpp  File.cpp  File.hpp  FileOperation.cpp  FileOperation.hpp  FileSystemComponent.hpp  FileSystemManager.cpp  FileSystemManager.hpp  FileSystemProxy.cpp  FileSystemProxy.hpp  FileSystemSearch.cpp  FileSystemSearch.hpp  FileVersion.cpp  FileVersion.hpp  Folder.cpp  Folder.hpp  LocalStorageStrategy.cpp  LocalStorageStrategy.hpp  Observer.hpp  PermissionsDecorator.cpp  PermissionsDecorator.hpp  Readme  StorageStrategy.hpp  Subject.cpp  Subject.hpp  User.cpp  User.hpp  main.cpp
